Fix z-index issue of toolbar menu

--- a/src/components/Toolbar/ToolbarMenu.module.css
+++ b/src/components/Toolbar/ToolbarMenu.module.css
@@ -17,6 +17,7 @@
    padding: 0.5rem;
    box-shadow: rgba(0, 0, 0, 0.3) 0px 20px 10px -10px;
    flex-direction: column;
+   z-index: 1001;
 }
 
 .toolbar__menu > button {
